--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:name=".activity.WeatherActivity"
             android:label="@string/title_activity_weather" >
         </activity>
+        <service android:name=".service.AutoUpdateService">
+        </service>
+        <receiver android:name=".receiver.AutoUpdateReceiver">
+        </receiver>
     </application>
 
 </manifest>
